--- a/2017062001/Base.lproj/Main.storyboard
+++ b/2017062001/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qgo-ES-d9o">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,6 +11,46 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller1-->
+        <scene sceneID="082-jq-0gh">
+            <objects>
+                <viewController id="qgo-ES-d9o" customClass="ViewController1" customModule="_017062001" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sQ1-SX-PfP"/>
+                        <viewControllerLayoutGuide type="bottom" id="OIV-Vo-ZKA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ak2-po-ZMk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="media-play-symbol_318-47368.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="UkF-JX-jUy">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Izi-6f-e0J">
+                                <rect key="frame" x="16" y="10" width="343" height="647"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="7Lu-2k-cVW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OIV-Vo-ZKA" firstAttribute="top" secondItem="UkF-JX-jUy" secondAttribute="bottom" id="6Sg-Ya-qSF"/>
+                            <constraint firstItem="Izi-6f-e0J" firstAttribute="centerX" secondItem="ak2-po-ZMk" secondAttribute="centerX" id="FUo-cX-5Yr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UkF-JX-jUy" secondAttribute="trailing" id="QPG-T3-c0z"/>
+                            <constraint firstItem="Izi-6f-e0J" firstAttribute="width" secondItem="UkF-JX-jUy" secondAttribute="width" id="UUT-o9-6V6"/>
+                            <constraint firstItem="Izi-6f-e0J" firstAttribute="height" secondItem="UkF-JX-jUy" secondAttribute="height" id="ceb-Fn-l5t"/>
+                            <constraint firstItem="UkF-JX-jUy" firstAttribute="top" secondItem="sQ1-SX-PfP" secondAttribute="bottom" id="cvr-P0-Azg"/>
+                            <constraint firstItem="UkF-JX-jUy" firstAttribute="leading" secondItem="ak2-po-ZMk" secondAttribute="leadingMargin" id="hiR-XO-Y4e"/>
+                            <constraint firstItem="Izi-6f-e0J" firstAttribute="centerY" secondItem="ak2-po-ZMk" secondAttribute="centerY" id="uZ5-Ic-kxB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qgv-f4-ow2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-322.39999999999998" y="154.27286356821591"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -27,7 +67,7 @@
                                 <rect key="frame" x="24" y="28" width="262.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKA-QU-cop">
                                 <rect key="frame" x="294.5" y="28" width="56.5" height="30"/>
@@ -46,7 +86,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ow3-Ng-wha">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ow3-Ng-wha">
                                 <rect key="frame" x="24" y="103" width="327" height="556"/>
                                 <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -80,7 +120,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="510" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="media-play-symbol_318-47368.jpg" width="626" height="626"/>
+    </resources>
 </document>
